--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,10 @@
 {
     "presets": [
-        ["env", {
-            "modules": false
-        }]
+        "@babel/env",
+        "@babel/typescript"
+    ],
+    "plugins": [
+        "@babel/proposal-class-properties",
+        "@babel/proposal-object-rest-spread"
     ]
 }
