--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ixa-helper",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "description": "sengokuixa.jp helper for pc client.",
   "main": "index.js",
   "scripts": {
@@ -16,16 +16,33 @@
   "author": "Jochen.He",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.134",
     "http-server": "github:indexzero/http-server",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/jquery": "^3.3.29",
+    "@types/node": "^12.0.8",
+    "@types/webpack": "^4.4.32",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "install": "^0.12.2",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.17.0",
+    "typescript": "^3.5.2",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.2"
   },
   "options": {
-    "presets": ["env"]
+    "presets": [
+      "env"
+    ]
   }
 }
