--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "http-server -c5 ./dist/",
     "build-dev": "NODE_ENV=development webpack && node scripts/build.js",
-    "build": "webpack && node scripts/build.js"
+    "build": "webpack && node scripts/build.js",
+    "tsr": "ts-node"
   },
   "keywords": [
     "sengokuixa",
