--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/lodash": "^4.14.134",
+    "@types/ramda": "0.26.33",
     "http-server": "github:indexzero/http-server",
-    "lodash": ">4.17.13"
+    "lodash": ">4.17.13",
+    "ramda": "0.26.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -36,6 +38,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "install": "^0.12.2",
+    "npm-run-all": "4.1.5",
     "ts-node": "^8.3.0",
     "tslint": "^5.17.0",
     "typescript": "^3.5.2",
