--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "server": "http-server -c5 ./dist/",
     "build-dev": "NODE_ENV=development webpack && node scripts/build.js",
     "build": "webpack && node scripts/build.js",
+    "lint": "tslint ./src/**/*.ts",
     "tsr": "ts-node"
   },
   "keywords": [
@@ -37,7 +38,7 @@
     "install": "^0.12.2",
     "ts-node": "^8.3.0",
     "tslint": "^5.17.0",
-    "typescript": "^3.5.2",
+    "typescript": "^3.6.4",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.2"
   },
