--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "@types/lodash": "^4.14.134",
     "http-server": "github:indexzero/http-server",
-    "lodash": ">4.17.13"
+    "lodash": ">4.17.13",
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -30,6 +31,7 @@
     "@babel/preset-typescript": "^7.3.3",
     "@types/jquery": "^3.3.29",
     "@types/node": "^12.0.8",
+    "@types/ramda": "^0.26.33",
     "@types/webpack": "^4.4.32",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
