--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "@types/node": "^12.0.8",
     "@types/ramda": "^0.26.33",
     "@types/webpack": "^4.4.32",
-    "ramda": "^0.26.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "fsevents": "2",
     "install": "^0.12.2",
     "npm-run-all": "4.1.5",
+    "ramda": "^0.26.1",
     "ts-node": "^8.3.0",
     "tslint": "^5.17.0",
     "typescript": "^3.6.4",
